--- a/react-todo-list/src/components/Todo/Todo.module.css
+++ b/react-todo-list/src/components/Todo/Todo.module.css
@@ -14,6 +14,12 @@
   flex: 1 0 0%;
   margin-left: 0.5rem;
   font-size: 1.5rem;
+  transition: all 250ms ease-out;
+}
+.text.selected {
+  opacity: 0.5;
+  text-decoration: line-through;
+  transition: all 250ms ease-out;
 }
 .icon {
   display: flex;
